--- a/2024/Datastruktur_och_Algoritmer/Uppgift_2/Makefile
+++ b/2024/Datastruktur_och_Algoritmer/Uppgift_2/Makefile
@@ -4,7 +4,11 @@ CFLAGS = -Wall -Wextra -Iinclude
 
 SRC = $(wildcard src/*.c)
 
-TARGET = bin/program.out
+ifeq ($(OS),Windows_NT)
+    TARGET = bin/program.exe
+else
+    TARGET = bin/program.out
+endif
 
 all: $(TARGET)
 
